vcluster_versioned_docs/version-0.24.0/deploy/topologies/air-gapped.mdx
---
title: Deploy vCluster in an air-gapped environment
sidebar_label: Air-gapped
sidebar_position: 5
description: Learn how to deploy vCluster in an air-gapped Kubernetes cluster.
sidebar_class_name: pro
---

import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import Flow, { Step } from "@site/src/components/Flow";

import BasePrerequisites from '../../../../platform/_partials/install/base-prerequisites.mdx';
import FipsConfig from '../../_partials/deploy/fips-config.mdx';
import LicenseKey from '../../_partials/deploy/license_key.mdx';
import ProAdmonition from '../../_partials/admonitions/pro-admonition.mdx';

# Deploy vCluster in an air-gapped environment

<ProAdmonition/>

This document explains how to deploy vCluster in environments without internet access, known as air-gapped environments.

## Prerequisites

- OCI-compliant private registry with a `/charts` folder - A private registry accessible to both the Kubernetes host cluster and a separate, internet-connected machine.
- An offline license key for vCluster - A LoftLabs license key is required to enable enterprise features.
    :::info
    <LicenseKey />
    :::

## Overview {#overview}

When deploying vCluster, there are artifacts that are typically accessed using an internet connection, but without access to internet, these artifacts need to be available to the Kubernetes cluster through a private registry:

- **vCluster Helm chart** – Typically retrieved from the LoftLabs Helm chart repository.
- **Container images referenced in the Helm chart** – Usually pulled from various public container registries.

After populating your private registry with the artifacts, you'll create the configuration file (`vcluster.yaml`) of your vCluster. Finally, you'll prep your host cluster to deploy your vCluster.

:::warning
When using virtual clusters in air-gapped environments, the
`config.experimental.deploy.vcluster.helm` [configuration setting](/docs/vcluster/configure/vcluster-yaml/#experimental-deploy-vcluster) does not work with external Helm repositories since they cannot be accessed. This means custom Helm charts from repositories like `charts.bitnami.com` cannot be used for virtual cluster deployments.
:::


## Populate images to a private registry {#populate-images-private-registry}

Each vCluster release includes multiple assets to help you upload the images to your private registry.

- `images.txt` - The required images to run vCluster, which assumes using the default Kubernetes version.
- `images-optional.txt` - An optional set of images to run vCluster using a different Kubernetes version.
- `download-images.sh` - A bash script that quickly iterates over all the images files to pull them and package them into a tarball to a machine that has internet access.
- `push-images.sh` - A bash script that takes the tarball generated from the download script to push them to your private registry.

### Prerequisites

- Access to the internet
- Ability to push to your OCI-compliant private registry
- Logged in to GitHub Container Registry
- `wget` installed
- `docker` installed

### Pull and push images {#pull-push-images}

<Flow id="offline-images">
  <Step>

  Set environment variables for the version of vCluster that you want to deploy and the private registry.

        ```bash title="Export environment variables"
        export VCLUSTER_VERSION=0.25.0 # Replace with the desired version
        export REGISTRY=ecr.io/myteam # This should be a prefix; do not include any image paths
        ```
  </Step>
  <Step>

  Download the assets from the vCluster GitHub release and make the scripts executable.

  :::note
  The `images.txt` contains all distributions for the default Kubernetes version. You can edit the
  file and remove the images for unused distributions.
  :::

  ```bash title="Download assets and prepare scripts"
  wget https://github.com/loft-sh/vcluster/releases/download/v"${VCLUSTER_VERSION}"/images.txt
  wget https://github.com/loft-sh/vcluster/releases/download/v"${VCLUSTER_VERSION}"/download-images.sh
  wget https://github.com/loft-sh/vcluster/releases/download/v"${VCLUSTER_VERSION}"/push-images.sh

  chmod +x ./download-images.sh
  chmod +x ./push-images.sh
  ```

  </Step>
  <Step>

  Run `download-images.sh` to pull all images and create a tarball of the images.

  ```bash title="Download and package images"
  ./download-images.sh --image-list images.txt
  ```

  :::tip
  Review the output to confirm all images were pulled successfully and packaged in the tarball.
  :::

  </Step>
  <Step>

  Run `push-images.sh` to upload all required images to your private registry.

  ```bash title="Push images to private registry"

  ./push-images.sh --registry ${REGISTRY}
  ```

  :::note
  When pushing images into your private registry, the public private registry is removed and only the repository and image name are pushed. This allows vCluster to set your private registry to use for all images used in deploying vCluster.
  :::

  </Step>
  <Step>
  **Optional**: If you want to deploy vCluster with a different Kubernetes version, download the `images-optional.txt` file. It contains additional container images required for that version, which you'll need to pull and push to your private registry.

  :::note
    The `images-optional.txt` contains multiple Kubernetes distributions and versions. You can edit the file and remove the images for the unused distributions and versions.
  :::

  ```bash title "Pull, package, and push all optional images"
    wget https://github.com/loft-sh/vcluster/releases/download/v${VCLUSTER_VERSION}/images-optional.txt

    ./download-images.sh --image-list images-optional.txt --images vcluster-images-optional.tar.gz
    ./push-images.sh --registry ${REGISTRY} --images vcluster-images-optional.tar.gz
  ```

  </Step>
</Flow>

## Populate the vCluster Helm chart to a private registry {#populate-vCluster-Helm-chart-private-registry}

You need to push the vCluster Helm chart to your OCI-compliant private registry.

### Prerequisites

- Access to the internet
- Ability to push to your OCI-compliant private registry
- `helm` installed: Helm v3.10+

### Pull and push the vCluster Helm chart {#download-push-vCluster-Helm-chart}

<Flow id="offline-helm-chart">
  <Step>

  **Optional**: If you haven’t already set the environment variables, set them now before continuing.

   ```bash title="Export environment variables"
   export VCLUSTER_VERSION=0.25.0 # Replace with the desired version
   export REGISTRY=ecr.io/myteam # A charts folder is expected
   ```

   :::note
The private registry assumes having a `/charts` folder, which is where to push all the Helm charts.
:::

  </Step>
   <Step>
Pull the vCluster Helm chart and push it into your private registry with the OCI protocol.

  ```bash title="Pull and push the Helm chart to your private registry"
  helm pull vcluster --repo https://charts.loft.sh --version ${VCLUSTER_VERSION}
  helm push vcluster-${VCLUSTER_VERSION}.tgz oci://${REGISTRY}/charts
  ```
  </Step>
</Flow>

<!--vale off-->

## Configure vCluster {#configure-vCluster}

The `vcluster.yaml` file contains all configuration settings for your vCluster deployment.

### Use a private registry without credentials

Set the default private registry in the `vcluster.yaml` file.

```yaml title="Setting the private registry"
controlPlane:
 advanced:
   defaultImageRegistry: ecr.io/myteam # Replace with your private registry
```

### Use an authenticated private registry {#use-authenticated-private-registry}

For registries that require authentication, create a Kubernetes secret in the namespace where you deploy the vCluster.
Assign the secret as an image pull secret for the vCluster control plane to access required images.

Optionally, you can use the same image pull secret for workloads inside the vCluster that pull from the same registry.

```yaml title="Image pull secrets configuration"
controlPlane:
  advanced:
    defaultImageRegistry: ecr.io/myteam # Replace with your private image registry
    serviceAccount:
      imagePullSecrets: # Uses credentials for the vCluster control plane
        - name: registry-credentials-secret-name # Replace with the name of the secret deployed on the host cluster of where the vCluster is deployed
    workloadServiceAccount: # Uses credentials for any workloads created in the vCluster
      imagePullSecrets:
        - name: registry-credentials-secret-name # Replace with the name of the secret deployed on the host cluster of where your vCluster is deployed
```

### Use a non-default Kubernetes version

If you downloaded `images-optional.txt` to use a different Kubernetes version, configure vCluster to use that version in your deployment.

```yaml title="Specific Kubernetes version configuration"
controlPlane:
  distro:
    k8s:
      image:
        tag: v1.31.1 # Replace with the Kubernetes version that you have chosen
```

### Replace the alpine image {#replace-Alpine-image}

If you use the `sync.toHost.pods.rewriteHosts` feature, manually replace the full path of the [alpine image](https://hub.docker.com/_/alpine) with your private registry path.
The `defaultImageRegistry` setting does not apply to this image.

```yaml title="Replace the alpine image"
sync:
  toHost:
    pods:
      rewriteHosts:
        initContainer:
          image: your-registry/library/alpine:3.20
```

### Reference the license key {#reference-license-key}

The `apiKey` is required to reference the license key to enable enterprise features in vCluster.

:::note
Although the config appears similar to when connecting a virtual cluster to the platform, the `apiKey` secret's actual value is your air-gapped license key.
:::

```bash title="API key configuration to activate enterprise features"
external:
  platform:
    apiKey:
      # The air-gapped license key provided by Loft has to be the data
      # under the first key (name does not matter) of the secret.
      secretName:
      # Namespace to search for the secret. If undefined,
      # it searches the namespace that the vCluster is deployed in.
      # If different than the namespace of the vCluster deployment,
      # then vCluster needs access to that namespace.
      namespace:
      # Default enabled to create the necessary RBAC roles
      # and role bindings in order to find the secret
      createRBAC: true
```

## Deploy vCluster {#deploy-vcluster}

### Prerequisites

- The host cluster must have access to pull images from the private registry.
<BasePrerequisites />

### Set up the host cluster and deploy

<Flow>
  <Step>
  On the host cluster, create the namespace for the vCluster, where the secrets and vCluster control plane pod are to be deployed.

  ```bash title="Create vCluster namespace"
  export VCLUSTER_NAMESPACE=vcluster-my-vcluster
  kubectl create namespace ${VCLUSTER_NAMESPACE}
  ```

  </Step>
  <Step>

  Create the secret to validate the license.

  Create a Kubernetes secret using the LoftLabs license key in the namespace where you deploy the vCluster.

  :::note
  The license secret is already base64-encoded.
  :::

  ```bash title="Create a Kubernetes secret for license Key"
  # Set the license key as an environment variable (already base64 encoded)
  export VCLUSTER_LICENSE_KEY="YOUR_BASE64_ENCODED_LICENSE_KEY_HERE"

  # Create secret
  kubectl create -f - <<EOF
  apiVersion: v1
  kind: Secret
  metadata:
    name: vcluster-platform-license-key
    namespace: ${VCLUSTER_NAMESPACE}
  type: Opaque
  data:
    license: ${VCLUSTER_LICENSE_KEY}
  EOF
  ```
  </Step>
  <Step>
  **Optional**: Create a secret to authenticate to your private registry.

  If your private registry requires authentication, create a Kubernetes secret that stores your login credentials.
  Place this secret in the same namespace where the vCluster is deployed so the control plane can pull the required container images.

  ```bash title="Create Kubernetes secret for login credentials"
  kubectl create -f - <<EOF
  apiVersion: v1
  kind: Secret
  metadata:
    name: registry-credentials-secret-name
    namespace: ${VCLUSTER_NAMESPACE}
  type: Opaque
  data:
    # Credentials based on your private registry
  EOF
  ```

  </Step>

  <Step>
  Review your `vcluster.yaml` file.

  ```yaml title="vcluster.yaml configuration"
  controlPlane:
    advanced:
      defaultImageRegistry: ecr.io/myteam # Replace with your private image registry
      serviceAccount:
        imagePullSecrets:
          - name: registry-credentials-secret-name # Replace with the name of the registry credentials secret
      workloadServiceAccount:
        imagePullSecrets:
          - name: registry-credentials-secret-name # Replace with the name of the registry credentials secret

  external:
    platform:
      apiKey:
        secretName: vcluster-platform-license-key
  ```

  </Step>
  <Step>
  Pull the vCluster Helm chart from the private registry.

  ```bash title="Pull the Helm chart"
  export VCLUSTER_VERSION=0.25.0 # Replace with the chart version that was pushed into your private registry
  export REGISTRY=myecr.io/team # Replace with the private registry

  ## Log in to the Helm registry if you haven't
  helm registry login ${REGISTRY} \
    --username myuser \
    --password mypassword

  helm pull oci://${REGISTRY}/charts/vcluster:${VCLUSTER_VERSION}
  ```
  </Step>
  <Step>

  Deploy vCluster into the namespace where you deployed the secrets.

  ```bash title="Deploy vCluster with Helm"
  export VCLUSTER_NAME="my-vcluster" # Replace with what you want to name your vCluster

  helm upgrade --install "${VCLUSTER_NAME}" oci://${REGISTRY}/charts/vcluster:${VCLUSTER_VERSION} \
    --version ${VCLUSTER_VERSION} \
    --values vcluster.yaml \
    --namespace ${VCLUSTER_NAMESPACE} \
  ```

  </Step>
</Flow>

## Air-gapped vCluster with FIPS images {#air-gapped-vCluster-FIPS-images}

To run vCluster in a FIPS-compliant environment, you must push FIPS-compliant images to your private registry.

Push the following images, using the appropriate Kubernetes version as the tag.
Tags are listed in the `images.txt` and `images-optional.txt` files.

- `ghcr.io/loft-sh/vcluster-pro-fips`
- `ghcr.io/loft-sh/kubernetes-fips`


:::note
The steps for [pulling, tagging, and pushing these images](#pull-push-images) are the same as for standard images. The only difference is that you reference the FIPS-compliant images instead.
:::

For more details on FIPS, refer to the [FIPS configuration guide](/vcluster/deploy/security/fips).

The following is an example `vcluster.yaml` configuration with the FIPS compliant images.

<details>
  <summary>FIPS configuration</summary>
  <FipsConfig />
</details>
