vcluster_versioned_docs/version-0.26.0/deploy/topologies/air-gapped.mdx
---
title: Deploy vCluster in an air-gapped environment
sidebar_label: Air-gapped
sidebar_position: 5
description: Learn how to deploy vCluster in an air-gapped Kubernetes cluster.
sidebar_class_name: pro
---

import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import Flow, { Step } from "@site/src/components/Flow";
import BasePrerequisites from '@site/docs/_partials/base-prerequisites.mdx';

import FipsConfig from '../../_partials/deploy/fips-config.mdx';
import ProAdmonition from '../../_partials/admonitions/pro-admonition.mdx';


# Deploy vCluster in an air-gapped environment

<ProAdmonition/>

This document explains how to deploy vCluster in environments without internet access, known as air-gapped environments.

:::important
Enterprise features require the vCluster Platform.

If you deploy a vCluster in an air-gapped environment and want to use enterprise features, you must also deploy the platform in air-gapped mode and connect the vCluster to it. A standalone air-gapped vCluster does not support any enterprise capabilities.
:::

## Overview {#overview}

When deploying vCluster, there are artifacts that are typically accessed using an internet connection, but without access to the internet, these artifacts need to be available to the Kubernetes cluster through a private registry:

- **vCluster Helm chart**—Typically retrieved from the LoftLabs Helm chart repository.
- **Container images referenced in the Helm chart**—Usually pulled from various public container registries.

After uploading the required artifacts to your private registry, create the `vcluster.yaml` configuration file and prepare the host cluster for deployment.

:::warning
When using virtual clusters in air-gapped environments, the
`config.experimental.deploy.vcluster.helm` [configuration setting](/docs/vcluster/configure/vcluster-yaml/#experimental-deploy-vcluster) does not work with external Helm repositories since they cannot be accessed. This means custom Helm charts from repositories like `charts.bitnami.com` cannot be used for virtual cluster deployments.
:::

## Prerequisites {#prerequisites}

:::note
You must have the vCluster Platform deployed in your air-gapped environment to use this guide. To prepare your environment for air-gapped deployment, see the [platform air-gapped installation guide](/platform/install/advanced/air-gapped).
:::

### Registry requirements

- OCI-compliant private registry with a `/charts` folder - A private registry accessible to both the Kubernetes host cluster and a separate, internet-connected machine.
- Ability to push images and Helm charts to your private registry.

### Deployment requirements

Ensure you have the following:

<BasePrerequisites />

- Access to pull the Helm chart and images from the private registry

- On the internet-connected machine for populating the registry:
  - `wget` installed
  - `docker` installed
  - You are logged into GitHub Container Registry

## Populate images to a private registry {#populate-images-private-registry}

Each vCluster release includes multiple assets to help you upload the images to your private registry.

- `images.txt` - The required images to run vCluster, which assumes using the default Kubernetes version.
- `images-optional.txt` - An optional set of images needed for additional features, including different Kubernetes distributions and versions.
- `download-images.sh` - A bash script that quickly iterates over all the images files to pull them and package them into a tarball to a machine that has internet access.
- `push-images.sh` - A bash script that takes the tarball generated from the download script to push them to your private registry.

### Pull and push images {#pull-push-images}

<Flow id="offline-images">
  <Step>

  Set environment variables for the version of vCluster that you want to deploy and the private registry.

       ```bash title="Export environment variables"
        export VCLUSTER_VERSION=0.25.0 # Replace with the desired version
        export REGISTRY=ecr.io/myteam # This should be a prefix; do not include any image paths
        ```
  </Step>
  <Step>

  Download the assets from the [vCluster GitHub release](https://github.com/loft-sh/vcluster/releases) and make the scripts executable.

  :::note
  The `images.txt` contains all distributions for the default Kubernetes version. You can edit the
  file and remove the images for unused distributions.
  :::

  ```bash title="Download assets and prepare scripts"
  wget https://github.com/loft-sh/vcluster/releases/download/v"${VCLUSTER_VERSION}"/images.txt
  wget https://github.com/loft-sh/vcluster/releases/download/v"${VCLUSTER_VERSION}"/download-images.sh
  wget https://github.com/loft-sh/vcluster/releases/download/v"${VCLUSTER_VERSION}"/push-images.sh

  chmod +x ./download-images.sh
  chmod +x ./push-images.sh
  ```

  </Step>
  <Step>

  Run `download-images.sh` to pull all images and create a tarball of the images.

  Review the output to confirm all images were pulled successfully and packaged in the tarball.

  ```bash title="Download and package images"
  ./download-images.sh --image-list images.txt
  ```

  </Step>
  <Step>

  Run `push-images.sh` to upload all required images to your private registry.

  When pushing images into your private registry, the public private registry is removed and only the repository and image name are pushed. This allows vCluster to set your private registry to use for all images used in deploying vCluster.

  ```bash title="Push images to private registry"
  ./push-images.sh --registry ${REGISTRY}
  ```

  </Step>
  <Step>

  **Optional**: If you need additional features (such as different Kubernetes versions or distributions), download the `images-optional.txt` file. It contains extra container images required for these features, which you'll need to pull and push to your private registry.

  The `images-optional.txt` includes images for various optional configurations. You can edit the file and keep only the images you need, removing those for unused features or versions.

   :::note
   The `images-optional.txt` may include multiple Kubernetes distributions, versions, or other feature-dependent images. You can edit the file to retain only what’s necessary for your deployment.
   :::

   ```bash title "Pull, package, and push all optional images"
   wget https://github.com/loft-sh/vcluster/releases/download/v${VCLUSTER_VERSION}/images-optional.txt

   ./download-images.sh --image-list images-optional.txt --images vcluster-images-optional.tar.gz
   ./push-images.sh --registry ${REGISTRY} --images vcluster-images-optional.tar.gz
   ```

  </Step>
</Flow>

## Populate the vCluster Helm chart to a private registry {#populate-vCluster-Helm-chart-private-registry}

You must push the vCluster Helm chart to your OCI-compliant private registry.

### Pull and push the vCluster Helm chart {#download-push-vCluster-Helm-chart}

<Flow id="offline-helm-chart">
  <Step>

  **Optional**: If you haven’t already set the environment variables, set them now before continuing.

  The private registry assumes having a `/charts` folder, which is where to push all the Helm charts.

   ```bash title="Export environment variables"
   export VCLUSTER_VERSION=0.25.0 # Replace with the desired version
   export REGISTRY=ecr.io/myteam # A charts folder is expected
   ```

:::note
The private registry assumes having a `/charts` folder, which is where to push all the Helm charts.
:::

  </Step>
   <Step>
Pull the vCluster Helm chart and push it into your private registry with the OCI protocol.

  ```bash title="Pull and push the Helm chart to your private registry"
  helm pull vcluster --repo https://charts.loft.sh --version ${VCLUSTER_VERSION}
  helm push vcluster-${VCLUSTER_VERSION}.tgz oci://${REGISTRY}/charts
  ```
  </Step>
</Flow>

<!--vale off-->

## Configure vCluster {#configure-vCluster}

The `vcluster.yaml` file contains all configuration settings for your vCluster deployment.

<details>
  <summary>Use a private registry without credentials</summary>

Set the default private registry that doesn't have authentication.

```yaml title="Setting the private registry"
controlPlane:
 advanced:
   defaultImageRegistry: ecr.io/myteam # Replace with your private registry
```

</details>

<details>
  <summary>Use an authenticated private registry</summary>

For registries that require authentication, create a Kubernetes secret in the namespace where you deploy the vCluster.
Assign the secret as an image pull secret for the vCluster control plane to access required images.

Optionally, you can use the same image pull secret for workloads inside the vCluster that pull from the same registry.

```yaml title="Image pull secrets configuration"
controlPlane:
  advanced:
    defaultImageRegistry: ecr.io/myteam # Replace with your private image registry
    serviceAccount:
      imagePullSecrets: # Uses credentials for the vCluster control plane
        - name: registry-credentials-secret-name # Replace with the name of the secret deployed on the host cluster of where the vCluster is deployed
    workloadServiceAccount: # Uses credentials for any workloads created in the vCluster
      imagePullSecrets:
        - name: registry-credentials-secret-name # Replace with the name of the secret deployed on the host cluster of where your vCluster is deployed
```

</details>

<details>
  <summary>Use a non-default Kubernetes version</summary>

If you downloaded `images-optional.txt` to use additional features (such as a different Kubernetes version), configure vCluster to use those features in your deployment.

```yaml title="Specific Kubernetes version configuration"
controlPlane:
  distro:
    k8s:
      image:
        tag: v1.31.1 # Replace with the Kubernetes version that you have chosen
```

</details>

<details>
  <summary>Replace the alpine image</summary>

If you use the `sync.toHost.pods.rewriteHosts` feature, manually replace the full path of the [alpine image](https://hub.docker.com/_/alpine) with your private registry path.
The `defaultImageRegistry` setting does not apply to this image.

```yaml title="Replace the alpine image"
sync:
  toHost:
    pods:
      rewriteHosts:
        initContainer:
          image: your-registry/library/alpine:3.20
```

</details>

## Create a platform access key {#create-platform-access-key}

Before deploying vCluster, you must [create an access key](/vcluster/configure/vcluster-yaml/external/platform/api-key) to authenticate your virtual cluster. This step is essential for connecting your air-gapped vCluster to the platform.

## Deploy vCluster {#deploy-vcluster}

After the platform is deployed, the access key is created, and your private registry is populated with the required images and charts, you can proceed with deploying the vCluster.

### Set up the host cluster and deploy

<Flow>
  <Step>
  On the host cluster, create the namespace for the vCluster, where the secrets and vCluster control plane pod are to be deployed in:

  ```bash title="Create vCluster namespace"
  export VCLUSTER_NAMESPACE=vcluster-my-vcluster  # Replace with the name of the namespace you want to deploy your vCluster into
  kubectl create namespace ${VCLUSTER_NAMESPACE}
  ```
  </Step>
  <Step>
  **Optional**: Create a secret to authenticate to your private registry.

  If your private registry requires authentication, create a Kubernetes secret that stores your login credentials.
  Place this secret in the same namespace where the vCluster is deployed so the control plane can pull the required container images.

  ```bash title="Create Kubernetes secret for login credentials"
  kubectl create -f - <<EOF
  apiVersion: v1
  kind: Secret
  metadata:
    name: registry-credentials-secret-name
    namespace: ${VCLUSTER_NAMESPACE}
  type: Opaque
  data:
    # Credentials based on your private registry
  EOF
  ```

  </Step>

  <Step>
  Review your `vcluster.yaml` file.

  ```yaml title="vcluster.yaml configuration"
  controlPlane:
    advanced:
      defaultImageRegistry: ecr.io/myteam # Replace with your private image registry
      serviceAccount:
        imagePullSecrets:
          - name: registry-credentials-secret-name # Replace with the name of the registry credentials secret
      workloadServiceAccount:
        imagePullSecrets:
          - name: registry-credentials-secret-name # Replace with the name of the registry credentials secret

  external:
    platform:
      apiKey:
        secretName: vcluster-platform-api-key # Name of the secret containing the access key
        namespace: vcluster-platform # Namespace where the secret is located (optional)
        createRBAC: true # Automatically create RBAC to access the secret
  ```

  </Step>
  <Step>

  Deploy vCluster into the namespace where you deployed the secrets.

  ```bash title="Deploy vCluster with Helm"
  export VCLUSTER_VERSION=0.25.0 # Replace with the chart version that was pushed into your private registry
  export REGISTRY=myecr.io/team # Replace with the private registry

  export VCLUSTER_NAME="my-vcluster" # Replace with what you want to name your vCluster

  helm upgrade --install "${VCLUSTER_NAME}" oci://${REGISTRY}/charts/vcluster:${VCLUSTER_VERSION} \
    --version ${VCLUSTER_VERSION} \
    --values vcluster.yaml \
    --namespace ${VCLUSTER_NAMESPACE} \
  ```

  </Step>
</Flow>

## Air-gapped vCluster with FIPS images {#air-gapped-vCluster-FIPS-images}

To run vCluster in a FIPS-compliant environment, you must push FIPS-compliant images to your private registry.

Push the following images, using the appropriate Kubernetes version as the tag.
Tags are listed in the `images.txt` and `images-optional.txt` files.

- `ghcr.io/loft-sh/vcluster-pro-fips`
- `ghcr.io/loft-sh/kubernetes-fips`


:::tip
The steps for [pulling, tagging, and pushing these images](#pull-push-images) are the same as for standard images. The only difference is that you reference the FIPS-compliant images instead.
:::

For more details on FIPS, refer to the [FIPS configuration guide](/vcluster/deploy/control-plane/container/security/fips).

The following is an example `vcluster.yaml` configuration with the FIPS compliant images.

<details>
  <summary>FIPS configuration</summary>
  <FipsConfig />
</details>
